0.9618_01 2022-07-06
  [New Featres]
    * Add --user-name option to spvmdist command.
    * Add --user-email option to spvmdist command.
  [CHANGES]
    * spvm_dist command add date information to the generated documents.
    * Need Time::Piece 1.12
    * Removed --output_dir option of spvmdist command from document. This was removed in past.
0.9618 2022-07-05
  [CHANGES]
    * All output of compiler and linker print to stderr.
0.9617 2022-07-05
  [New Featres]
    * Add spvm_warn to native API
  [CHANGES]
    * "use ModuleName" is added to the test case class that is generated by spvmdist command 
  [BUG FIX]
    * Fix the bug that quiet decting order bug.
  [NON BACKWORD COMPATIBLE CHANGES]
    * The default value of quiet and force of SPVM::Builder::Config become undef.
      undef means don't determin quiet and force in SPVM::Builder::Config.
0.9616 2022-07-01
  [New Featres]
    * Add to_bin method to SPVM::BlessedObject::String.
  [CHANGES]
    * Removed "Bug Report" and "Support" section from the output of spvmdist command.
  [NON BACKWORD COMPATIBLE CHANGES]
    * If a Perl scalar value is passed to SPVM string type, sv_utf8_encode don't be performed
      because this is needed to pass 8bit character(128-255) such as "\xff" to SPVM as it is.
0.9615 2022-06-30
  [CHANGES]
    * Improve the pod that spvmdist generates.
  [BUG FIX]
    * Fix the bug that SPVM::Builder::Config doesn't use SPVM::Builder::Resource.
  [NON BACKWORD COMPATIBLE CHANGES]
    * Remove unused and undocumented protected descriptor.
0.9614 2022-06-29
  [CHANGES]
  * The parent class must be a class type and non-pointer type.
  * The name of the parant class must be different from the name of the class.
  * The all super classes must be different from its own class. Recursive inheritance isn't allowed
  * Remove MANIFEST from .gitignore that is generated by spvmdist.
  * lib_dirs of SPVM::Builder::Config is always added to link command.
  * Add SPVM::Builder::LibInfo module.